--- a/frontend/src/components/Layout/Layout.module.scss
+++ b/frontend/src/components/Layout/Layout.module.scss
@@ -14,6 +14,7 @@
 		margin: 0 auto;
 		padding-top: 6rem;
 
+		padding-inline-end: functions.gutter();
 		@include mixins.keep-within-width();
 
 		@include mixins.breakpoint(md) {
